# invezgo-python-sdk

./: .gitattributes  .gitignore  .gitignore-notes.md  .pre-commit-config.yaml  CHANGELOG.md  MANIFEST.in  README.md  publishing.md  pyproject.toml  requirements-dev.txt  setup.py
examples/: __init__.py  advanced_usage.py  basic_usage.py  error_handling.py
invezgo/: __init__.py  client.py  exceptions.py
invezgo/modules/: __init__.py  ai.py  analysis.py  base.py  health.py  journals.py  membership.py  portfolios.py  posts.py  profile.py  screener.py  search.py  trades.py  watchlists.py
