[build-system]
requires = ["setuptools>=45", "wheel", "setuptools_scm[toml]>=6.2"]
build-backend = "setuptools.build_meta"

[project]
name = "invezgo-sdk"
version = "1.0.0"
description = "Python SDK for Invezgo API - Indonesian Stock Market Data"
readme = "README.md"
requires-python = ">=3.7"
license = {text = "MIT"}
authors = [
    {name = "Invezgo", email = "admin@invezgo.com"}
]
keywords = ["invezgo", "indonesia", "stock", "market", "api", "sdk", "investment", "trading"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Operating System :: OS Independent",
]
dependencies = [
    "requests>=2.28.0",
    "typing-extensions>=4.0.0; python_version<'3.8'",
]

[project.urls]
Homepage = "https://invezgo.com"
Documentation = "https://invezgo.com"
Repository = "https://github.com/invezgo/invezgo-sdk-python"
"Bug Reports" = "https://github.com/invezgo/invezgo-sdk-python/issues"

[tool.setuptools]
packages = ["invezgo"]

[tool.setuptools.package-data]
invezgo = ["py.typed"]

